Utkarsh: alignments fixed

--- a/style.scss
+++ b/style.scss
@@ -8,6 +8,9 @@ $white: #fff;
 $black-ish: #000428;
 $brown: #b2a98f;
 
+body{
+  overflow: hidden;
+}
 .mother-cont{
   position: absolute;
   overflow: hidden;
@@ -73,7 +76,7 @@ $brown: #b2a98f;
        position: absolute;
        width: 110%;
        min-height: 50%;
-       bottom: -120px;
+       bottom: 0px;
        left: -20px;
      }
      .bottom-cloud-mob{
@@ -245,7 +248,7 @@ animation: anim 2s ease-in-out infinite 1.5s;
   width: 110%;
   // min-height: 10vh;
   bottom: 0;
-  left: 0;
+  left: -10px;
   position: absolute;
   // height:auto;
 }
@@ -373,7 +376,7 @@ animation: anim 2s ease-in-out infinite 1.5s;
 	display: block;
 	position: absolute;
 	width: 100%;
-	height: 110%;
+	height: 100%;
   overflow: hidden;
 }
 
